# ToDoApp

./: CMakeLists.txt  README.md  conanfile.txt  gui_main.cpp  task_manager.hpp  task_manager_cli.cpp
